Added item descriptions

--- a/index.html
+++ b/index.html
@@ -166,7 +166,18 @@
 
     // Explanations for items
     var itemExplanations = {
+      'learning-and-culture': 'This is learning and culture',
       'debt-service-costs': 'This is the tax revenue allocated to servicing South Africa\'s national debt. It is also, along with post-school education and training, the fastest growing item of expenditure in the 2019 budget.',
+      'economic-development': 'My stuff',
+       'economic-development': 'dfdsfdsfdsf',
+       'learning-and-culture': 'dfsdfsdf',
+       'peace-and-security': 'sdgsdfgds',
+       'health': 'dfsdfsdf',
+       'general-public-services': 'dsfsdfdsf',
+       'community-development': 'fdgdsgfsd',
+       'debt-service-costs': 'fgdsgdfsg',
+       'social-development': 'dsfsdfsdf'
+      /*
       'community-development': 'Community development includes public transport infrastructure and funds for the provision of water, sanitation and electricity.',
       'social-protection': 'This function provides social security and a safety net for low-income South Africans. It also improves social welfare service delivery to vulnerable individuals.',
       'economic-regulation-and-infrastructure': 'This includes water and road infrastructure.',
@@ -178,7 +189,6 @@
       'job-creation-and-labour-affairs': 'Expanded Public Works Programme, Community Works Programme and the Jobs Fund.',
       'executive-and-legislative-organs': 'This includes administration and support costs, including staff. It includes spending on government statistics and research.',
       'basic-education': 'This department develops, maintains and supports the South African school education system.',
-      'learning-and-culture': 'This is learning and culture',
       'local-government-and-housing': 'This department works to facilitate the creation of sustainable human settlements and the improvement to household quality of life.',
       'health': 'This department provides leadership and coordination of health services to promote the health of all people in South Africa.',
       'social-grants': 'This department aims to reduce poverty by providing income support to those in need.',
@@ -197,6 +207,7 @@
       'contingency-reserve': 'This is the contingency reserve - an amount set aside to accommodate changes in the economic environment as well as unforeseeable expenditure.',
       'external-affairs': 'This includes foreign economic aid to developing countries and economic aid through international organisations.',
       'payments-for-financial-assets': 'This item includes lending to public corporations or making equity investments in them for policy purposes.'
+      */
     }
 
     // Detailed budget info, links from vulekamali.gov.za
