--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
        'general-public-services': 'dsfsdfdsf',
        'community-development': 'fdgdsgfsd',
        'debt-service-costs': 'fgdsgdfsg',
-       'social-development': 'dsfsdfsdf'
+       'social-development': 'dsfsdfs'
       /*
       'community-development': 'Community development includes public transport infrastructure and funds for the provision of water, sanitation and electricity.',
       'social-protection': 'This function provides social security and a safety net for low-income South Africans. It also improves social welfare service delivery to vulnerable individuals.',
