--- a/index.html
+++ b/index.html
@@ -168,17 +168,15 @@
     var itemExplanations = {
       'learning-and-culture': 'This is learning and culture',
       'debt-service-costs': 'This is the tax revenue allocated to servicing South Africa\'s national debt. It is also, along with post-school education and training, the fastest growing item of expenditure in the 2019 budget.',
-      'economic-development': 'My stuff',
        'economic-development': 'dfdsfdsfdsf',
        'learning-and-culture': 'dfsdfsdf',
        'peace-and-security': 'sdgsdfgds',
-       'health': 'dfsdfsdf',
+       'health': 'This department provides leadership and coordination of health services to promote the health of all people in South Africa.',
        'general-public-services': 'dsfsdfdsf',
-       'community-development': 'fdgdsgfsd',
-       'debt-service-costs': 'fgdsgdfsg',
-       'social-development': 'dsfsdfsdf'
+       'community-development': 'Community development includes public transport infrastructure and funds for the provision of water, sanitation and electricity.',
+       'social-development': 'Community development includes public transport infrastructure and funds for the provision of water, sanitation and electricity.'
       /*
-      'community-development': 'Community development includes public transport infrastructure and funds for the provision of water, sanitation and electricity.',
+      'community-development': '',
       'social-protection': 'This function provides social security and a safety net for low-income South Africans. It also improves social welfare service delivery to vulnerable individuals.',
       'economic-regulation-and-infrastructure': 'This includes water and road infrastructure.',
       'post-school-education-and-training': 'This includes university subsidies, NSFAS, technical and vocational training, and community education. This along with debt servicing costs is the fastest growing item of expenditure in the 2019 budget.',
