--- a/index.html
+++ b/index.html
@@ -172,11 +172,10 @@
        'learning-and-culture': 'dfsdfsdf',
        'peace-and-security': 'sdgsdfgds',
        'health': 'This department provides leadership and coordination of health services to promote the health of all people in South Africa.',
-       'general-public-services': 'dsfsdfdsf',
+       'general-public-services': 'This include provision for public administration, exececutive and legislative orgsans and external affairs.',
+       'social-development': 'Community development includes public transport infrastructure and funds for the provision of water, sanitation and electricity.',
        'community-development': 'Community development includes public transport infrastructure and funds for the provision of water, sanitation and electricity.',
-       'social-development': 'Community development includes public transport infrastructure and funds for the provision of water, sanitation and electricity.'
-       'community-development': 'fdgdsgfsd',
-       'debt-service-costs': 'fgdsgdfsg',
+       'debt-service-costs': "This is the tax revenue allocated to servicing South Africa's national debt. It is also, along with post-school education and training, the fastest growing item of expenditure in the 2018 budget.",
        'social-development': 'dsfsdfs'
       /*
       'community-development': '',
