--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <div class="col-md-6 col-md-offset-3">
           <div id="difference-wrapper">
             <div id="difference">
-              <h4 id="did-you-know-wrapper"><span id="did-you-know">Did you know?</span> You are paying <span id="amount-wrapper">R<span id="amount">1240</span> more</span> in taxes than last year. You are also working an additional <span id="amount-wrapper"><span id="tax-minutes-change"></span> minutes(s)</span> for government services than in 2017. In 2019, you start earning for yourself at <span id="amount-wrapper"><span id="personal-time"></span></span>.</h3>
+              <h4 id="did-you-know-wrapper"><span id="did-you-know">Did you know?</span> The Tax Span has remained the same as last year. You are not paying any more Tax than the previous financial year.</h4>
               <h5 id="scroll-down">Scroll down for a detailed breakdown of your day</h5>
             </div>
           </div>
@@ -166,17 +166,16 @@
 
     // Explanations for items
     var itemExplanations = {
-      'learning-and-culture': 'This is learning and culture',
+      'learning-and-culture': 'This includes provision for basic education, university transfers, national student financial aid scheme and education administration',
       'debt-service-costs': 'This is the tax revenue allocated to servicing South Africa\'s national debt. It is also, along with post-school education and training, the fastest growing item of expenditure in the 2019 budget.',
-       'economic-development': 'dfdsfdsfdsf',
-       'learning-and-culture': 'dfsdfsdf',
-       'peace-and-security': 'sdgsdfgds',
+       'economic-development': 'This includes provision for economic regulation and infrastructure, industrialisation and exports, agriculture and rural development and job creation',
+       'peace-and-security': 'This includes provision for police services, defence and state security, law courts and prisions and howe affairs',
        'health': 'This department provides leadership and coordination of health services to promote the health of all people in South Africa.',
        'general-public-services': 'This include provision for public administration, exececutive and legislative orgsans and external affairs.',
        'social-development': 'Community development includes public transport infrastructure and funds for the provision of water, sanitation and electricity.',
        'community-development': 'Community development includes public transport infrastructure and funds for the provision of water, sanitation and electricity.',
        'debt-service-costs': "This is the tax revenue allocated to servicing South Africa's national debt. It is also, along with post-school education and training, the fastest growing item of expenditure in the 2018 budget.",
-       'social-development': 'dsfsdfs'
+       'social-development': 'This includes provision for old-age grant, social security funds, child-support grant and other grants'
       /*
       'community-development': '',
       'social-protection': 'This function provides social security and a safety net for low-income South Africans. It also improves social welfare service delivery to vulnerable individuals.',
