Changed did you know text

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <div class="col-md-6 col-md-offset-3">
           <div id="difference-wrapper">
             <div id="difference">
-              <h4 id="did-you-know-wrapper"><span id="did-you-know">Did you know?</span> The Tax Span has remained the same as last year. You are not paying any more Tax than the previous financial year.</h4>
+              <h4 id="did-you-know-wrapper"><span id="did-you-know">Did you know?</span>You are not paying any more tax than the previous financial year.</h4>
               <h5 id="scroll-down">Scroll down for a detailed breakdown of your day</h5>
             </div>
           </div>
