Update text and categories

--- a/index.html
+++ b/index.html
@@ -160,22 +160,31 @@
   }(document, 'script', 'facebook-jssdk'));</script>
 
   <!-- Social Media: Twitter button -->
+  <!--
   <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+  -->
 
   <script>
 
     // Explanations for items
     var itemExplanations = {
-      'learning-and-culture': 'This includes provision for basic education, university transfers, national student financial aid scheme and education administration',
+      'old-age-grant': 'Old-age pensions through social grants.',
+      'child-support-grant': 'Child-support grants.',
+      'higher-education-and-skills-development': 'This includes provision for university transfers, national student financial aid scheme and education administration',
+      'basic-education': 'This budget is allocated to develop, maintain and support the South African school education system.',
       'debt-service-costs': 'This is the tax revenue allocated to servicing South Africa\'s national debt. It is also, along with post-school education and training, the fastest growing item of expenditure in the 2019 budget.',
        'economic-development': 'This includes provision for economic regulation and infrastructure, industrialisation and exports, agriculture and rural development and job creation',
        'peace-and-security': 'This includes provision for police services, defence and state security, law courts and prisions and howe affairs',
        'health': 'This department provides leadership and coordination of health services to promote the health of all people in South Africa.',
-       'general-public-services': 'This include provision for public administration, exececutive and legislative orgsans and external affairs.',
-       'social-development': 'Community development includes public transport infrastructure and funds for the provision of water, sanitation and electricity.',
+       'general-public-services': 'This includes provision for public administration, exececutive and legislative orgsans and external affairs.',
        'community-development': 'Community development includes public transport infrastructure and funds for the provision of water, sanitation and electricity.',
        'debt-service-costs': "This is the tax revenue allocated to servicing South Africa's national debt. It is also, along with post-school education and training, the fastest growing item of expenditure in the 2018 budget.",
-       'social-development': 'This includes provision for old-age grant, social security funds, child-support grant and other grants'
+       'social-development': 'This includes provision for social security funds and grants, exluding pensions and child support grants.',
+       'police-services': 'The Police Department works to prevent, combat and investigate crime, maintain public order, and uphold and enforce the law.',
+       'defence-and-state-security': 'This department defends and protects the Republic of South Africa, its territorial integrity and its people.',
+       'home-affairs': 'Birth certificates, marriage certificates, ID books, passports, etc.',
+       'law-courts-and-prisons': 'The focus of this department is to contribute to a just, peaceful and safer South Africa.',
+       'innovation-science-and-technology': '',
       /*
       'community-development': '',
       'social-protection': 'This function provides social security and a safety net for low-income South Africans. It also improves social welfare service delivery to vulnerable individuals.',
