--- a/index.html
+++ b/index.html
@@ -178,6 +178,8 @@
        'law-courts-and-prisons': 'The focus of this department is to contribute to a just, peaceful and safer South Africa.',
        'social-protection': 'Government’s social protection system works to reduce poverty and inequality by issuing social grants to and providing social welfare services for vulnerable groups.',
        'post-school-education-and-training': 'This includes university subsidies, NSFAS, technical and vocational education, community education and training, and skills development levy institutions.',
+       'economic-regulation-and-infrastructure': 'This includes the South African National Roads Agency, water infrastructure and the postal service. R539.2 million is also allocated to help decontaminate and decommission nuclear waste.',
+       'social-security-funds': 'Social security funds provide support for unemployed workers and those involved in road and workplace accidents.',
       /*
       'community-development': '',
       'social-protection': 'This function provides social security and a safety net for low-income South Africans. It also improves social welfare service delivery to vulnerable individuals.',
