--- a/index.html
+++ b/index.html
@@ -180,6 +180,9 @@
        'post-school-education-and-training': 'This includes university subsidies, NSFAS, technical and vocational education, community education and training, and skills development levy institutions.',
        'economic-regulation-and-infrastructure': 'This includes the South African National Roads Agency, water infrastructure and the postal service. R539.2 million is also allocated to help decontaminate and decommission nuclear waste.',
        'social-security-funds': 'Social security funds provide support for unemployed workers and those involved in road and workplace accidents.',
+       'arts-culture-sport-and-recreation': 'Includes recreational and sporting services, cultural services, broadcasting and publishing services, religious and other community services, as well as related R&amp;D.',
+       'payments-for-financial-assets': 'This item includes lending to public corporations or making equity investments in them for policy purposes.',
+       'home-affairs' : 'This authority facilitates and manages the legitimate movement of people and goods across borders and through other ports of entry. This item also includes the Government Printing Works and the Independent Electoral Commission',
       /*
       'community-development': '',
       'social-protection': 'This function provides social security and a safety net for low-income South Africans. It also improves social welfare service delivery to vulnerable individuals.',
