--- a/index.html
+++ b/index.html
@@ -183,37 +183,10 @@
        'arts-culture-sport-and-recreation': 'Includes recreational and sporting services, cultural services, broadcasting and publishing services, religious and other community services, as well as related R&amp;D.',
        'payments-for-financial-assets': 'This item includes lending to public corporations or making equity investments in them for policy purposes.',
        'home-affairs' : 'This authority facilitates and manages the legitimate movement of people and goods across borders and through other ports of entry. This item also includes the Government Printing Works and the Independent Electoral Commission',
-      /*
-      'community-development': '',
-      'social-protection': 'This function provides social security and a safety net for low-income South Africans. It also improves social welfare service delivery to vulnerable individuals.',
-      'economic-regulation-and-infrastructure': 'This includes water and road infrastructure.',
-      'post-school-education-and-training': 'This includes university subsidies, NSFAS, technical and vocational training, and community education. This along with debt servicing costs is the fastest growing item of expenditure in the 2019 budget.',
-      'social-security-funds': 'This includes subsidies for early childhood development and to employ social workers.',
-      'public-administration-and-fiscal-affairs': 'Includes spending on the revitalisation of the Batho Pele programme and the implementation of the Public Service Charter.',
-      'industrialisation-and-exports': 'Including economic development and incentive programmes.',
-      'agriculture-and-rural-development': 'This includes land reform, land restitution and farmer support.',
-      'job-creation-and-labour-affairs': 'Expanded Public Works Programme, Community Works Programme and the Jobs Fund.',
-      'executive-and-legislative-organs': 'This includes administration and support costs, including staff. It includes spending on government statistics and research.',
-      'basic-education': 'This department develops, maintains and supports the South African school education system.',
-      'local-government-and-housing': 'This department works to facilitate the creation of sustainable human settlements and the improvement to household quality of life.',
-      'health': 'This department provides leadership and coordination of health services to promote the health of all people in South Africa.',
-      'social-grants': 'This department aims to reduce poverty by providing income support to those in need.',
-      'police-services': 'The Police Department works to prevent, combat and investigate crime, maintain public order, and uphold and enforce the law.',
-      'economic-infrastructure': 'This department\'s goal is to create income generating opportunities through improved physical infrastructure.',
-      'general-public-services': 'This includes expenditure on the Presidency, Parliament, Dept of Home Affairs, Communications, International Relations, Public Service and Administration, and National Treasury.',
-      'employment-labour-affairs': 'This department works for you to reduce unemployment, poverty and inequality through pursuing the objectives of productive employment and decent work for all.',
-      'higher-education-training': 'This department develops and supports a quality higher education and vocational education sector.',
-      'defence-state-security': 'This department defends and protects the Republic of South Africa, its territorial integrity and its people.',
-      'law-courts-prisons': 'The focus of this department is to contribute to a just, peaceful and safer South Africa.',
-      'trade-industry': 'This department works to facilitate access to sustainable economic activity and employment.',
-      'agriculture-rural-development-land-reform': 'This category involves the promotion of agricultural, forestry and fisheries resource management, and the creation of equitable and sustainable land dispensation.',
-      'science-technology-and-environment': 'This category focuses on realising the full potential of science and technology in social and economic development, and leads South Africa\'s environmental sector to achieve sustainable development.',
-      'home-affairs': 'Birth certificates, marriage certificates, ID books, passports, etc.',
-      'arts-sports-recreation-and-culture': 'This category is for creating an enabling environment in which the arts, culture and sport can play a significant role in nation building and socio-economic development.',
-      'contingency-reserve': 'This is the contingency reserve - an amount set aside to accommodate changes in the economic environment as well as unforeseeable expenditure.',
-      'external-affairs': 'This includes foreign economic aid to developing countries and economic aid through international organisations.',
-      'payments-for-financial-assets': 'This item includes lending to public corporations or making equity investments in them for policy purposes.'
-      */
+       'external-affairs' : 'This includes foreign economic aid to developing countries and economic aid through international organisations.',
+       'contingency-reserve' : 'Government has a contingency reserve for emergencies and unforeseeable events.',
+       'job-creation-and-labour-affairs' : 'Public employment programmes, including the Expanded Public Works Programme.',
+       'agriculture-and-rural-development' : 'This includes land reform, and farmer support and development',
     }
 
     // Detailed budget info, links from vulekamali.gov.za
