--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <meta property="og:title" content="The 2019 Tax Clock" />
   <meta property="og:description" content="It’s easy to see how much of your salary is taken for taxes, but do you know how many hours are allocated to those deductions? Enter your salary to see how your tax money is being spent." />
-  <meta property="og:image" content="https://www.taxclock.co.za/taxclock/preview.png" />
+  <meta property="og:image" content="https://www.taxclock.co.za/preview.png" />
   <meta property="og:url" content="https://www.taxclock.co.za/index.html?show-embed-link=true" />
 
   <title>The 2019 Tax Clock - How much time do you spend paying off your tax</title>
