Added budget specifics

--- a/index.html
+++ b/index.html
@@ -170,15 +170,15 @@
     var itemExplanations = {
       'basic-education': 'This budget is allocated to develop, maintain and support the South African school education system.',
       'debt-service-costs': 'This is the tax revenue allocated to servicing South Africa\'s national debt. It is also, along with post-school education and training, the fastest growing item of expenditure in the 2020 budget.',
-       'health': 'This department provides leadership and coordination of health services to promote the health of all people in South Africa.',
-       'community-development': 'Community development includes public transport infrastructure and funds for the provision of water, sanitation and electricity.',
+       'health': 'This department provides leadership and coordination of health services to promote the health of all people in South Africa. Comprises District health services (R102bn), Central hospital services (R44.7bn), Provincial hospital services (R37.6bn), Other health services (R35.4bn), and (R10.1bn)',
+       'community-development': 'Community development includes public transport infrastructure and funds for the provision of water, sanitation and electricity. The budget is comprised of Municipal equitable share (R74.7bn), Human settlements, water and electrification programmes (R55.7bn), Public transport (R44.7bn), and Other human settlements and municipal infrastructure (R37.2bn)',
        'police-services': 'The Police Department works to prevent, combat and investigate crime, maintain public order, and uphold and enforce the law.',
        'defence-and-state-security': 'This department defends and protects the Republic of South Africa, its territorial integrity and its people.',
        'home-affairs': 'Birth certificates, marriage certificates, ID books, passports, etc.',
        'law-courts-and-prisons': 'The focus of this department is to contribute to a just, peaceful and safer South Africa.',
        'social-protection': 'Government’s social protection system works to reduce poverty and inequality by issuing social grants to and providing social welfare services for vulnerable groups.',
        'post-school-education-and-training': 'This includes university subsidies, NSFAS, technical and vocational education, community education and training, and skills development levy institutions.',
-       'economic-regulation-and-infrastructure': 'This includes the South African National Roads Agency, water infrastructure and the postal service. R539.2 million is also allocated to help decontaminate and decommission nuclear waste.',
+       'economic-development': 'This budget includes the following allocations: Economic regulation and infrastructure (R105.3bn), Industrialisation and exports (R39bn), Agriculture and rural development (R28.3bn), and Job creation and labour affairs (R22.4bn). Innovation, science and technology is listedd separately',
        'social-security-funds': 'Social security funds provide support for unemployed workers and those involved in road and workplace accidents.',
        'arts-culture-sport-and-recreation': 'Includes recreational and sporting services, cultural services, broadcasting and publishing services, religious and other community services, as well as related R&amp;D.',
        'payments-for-financial-assets': 'This item includes lending to public corporations or making equity investments in them for policy purposes.',
@@ -187,6 +187,8 @@
        'contingency-reserve' : 'Government has a contingency reserve for emergencies and unforeseeable events.',
        'job-creation-and-labour-affairs' : 'Public employment programmes, including the Expanded Public Works Programme.',
        'agriculture-and-rural-development' : 'This includes land reform, and farmer support and development',
+       'other-learning-and-culture' : 'Part of social spending, this includes Skills development levy institutions (R21bn), Education administration (R17.8bn), and Technical & vocational education and training (R13.4bn)',
+       'other-social-development' : 'This item excludes social security funds, old-age pensions, and the child-support grant. Line items included are Other Grants (R35.bn), Provincial Social Development (R23.3bn), and Policy oversight and grant administration (R10bn).'
     }
 
     // Detailed budget info, links from vulekamali.gov.za
